BASIC Auth validations (works)

--- a/app/src/main/res/drawable/splash.xml
+++ b/app/src/main/res/drawable/splash.xml
@@ -3,7 +3,8 @@
     <item android:drawable="@color/colorPrimary"/>
     <item>
         <bitmap android:src = "@drawable/splash_logo"
-            android:gravity="fill_horizontal"/>
+            android:gravity="fill_horizontal"
+            />
     </item>
 
 </layer-list>
